random till all connected

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -72,6 +72,7 @@
 		  set_scenario(2);
 		  break;
 	      case 3:
+	      case 11:
 		  set_scenario(1);
 		  break;
 	      case 4:
@@ -422,6 +423,7 @@
 		  <option value="8">Ladder</option>
 		  <option value="9">Matrix</option>
 		  <option value="10">Triangulated</option>
+		  <option value="11">Random Till All</option>
 	      </select></td>
 	    </tr>
 	    <tr><td colspan="2" class="centred"><label>Initial node placement</label></td></tr>
