--- a/dyngraph.html
+++ b/dyngraph.html
@@ -73,6 +73,7 @@
 		  break;
 	      case 3:
 	      case 11:
+	      case 12:
 		  set_scenario(1);
 		  break;
 	      case 4:
@@ -423,7 +424,8 @@
 		  <option value="8">Ladder</option>
 		  <option value="9">Matrix</option>
 		  <option value="10">Triangulated</option>
-		  <option value="11">Random Till All</option>
+		  <option value="11">Rand:Rand Till All</option>
+		  <option value="12">Serial:Rand All</option>
 	      </select></td>
 	    </tr>
 	    <tr><td colspan="2" class="centred"><label>Initial node placement</label></td></tr>
