grid init layout

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -425,7 +425,7 @@
 		  <option value="9">Matrix</option>
 		  <option value="10">Triangulated</option>
 		  <option value="11">Rand:Rand Till All</option>
-		  <option value="12">Serial:Rand All</option>
+		  <option value="12">Serial:Rand Till All</option>
 	      </select></td>
 	    </tr>
 	    <tr><td colspan="2" class="centred"><label>Initial node placement</label></td></tr>
@@ -437,6 +437,7 @@
 		  <option value="lrdiagonal">Diagonal</option>
 		  <option value="x">X-shaped</option>
 		  <option value="o">Circular</option>
+		  <option value="grid">Grid</option>
 	      </select></td>
 	    </tr>
 	    <tr><td colspan="2" class="centred"><label>Edge List</label></td></tr>
