corrections for edge display and disconnection

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -482,7 +482,7 @@
 	      <td><input type="button" title="した (Ctrl+Shift+DownArrow)" id="btn_down" onClick="nudge('down');" value="下" /></td>
 	    </tr>
 	    <tr>
-	      <td><label><input type="button" id="btn_discover_groups" onClick="reset_safe_colour_index();discover_node_groups();" value="Colour Groups" /> or <input type="button" id="btn_connect_groups" onClick="reset_safe_colour_index();connect_node_groups('cb_rnd_conn_grps');" value="Connect Groups" /> (rand:<input type="checkbox" class="cb" id="cb_rnd_conn_grps" />) starting with colour </label><select class="button1" id="sel_starting_safe_colour" onChange="console.log(this.selectedIndex + ': ' + this[this.selectedIndex].text)"></select></td>
+	      <td><label><input type="button" id="btn_discover_groups" onClick="reset_safe_colour_index();Graph.discover_node_groups(g);" value="Colour Groups" /> or <input type="button" id="btn_connect_groups" onClick="reset_safe_colour_index();Graph.connect_node_groups(g,'cb_rnd_conn_grps','nu_edges');" value="Connect Groups" /> (rand:<input type="checkbox" class="cb" id="cb_rnd_conn_grps" checked>) starting with colour </label><select class="button1" id="sel_starting_safe_colour" onChange="console.log(this.selectedIndex + ': ' + this[this.selectedIndex].text)"></select></td>
 	      <td></td>
 	    </tr>
 	    <tr>
@@ -563,20 +563,24 @@
 	    nodes[nd_sel_box2.selectedIndex].fillcolour = sel_col;
 	    nodes[nd_sel_box2.selectedIndex].linecolour = sel_col;
 	}
-	function connect_selected_nodes(nodes=g.ns,sel1="sel_node_list1",sel2="sel_node_list2") {
+	function connect_selected_nodes(nodes=g.ns,sel1="sel_node_list1",sel2="sel_node_list2",nued_id="nu_edges") {
 	    const nd_sel_box1 = document.getElementById(sel1);
 	    const nd_sel_box2 = document.getElementById(sel2);
-	    nodes[nd_sel_box1.selectedIndex].connect(nodes[nd_sel_box2.selectedIndex]);
+	    g.addLink(nd_sel_box1.selectedIndex,nd_sel_box2.selectedIndex);
 	    nd_sel_box2.dispatchEvent(new Event("change"));
+	    document.getElementById(nued_id).value = g.nu_edges;
 	}
-	function disconnect_selected_nodes(nodes=g.ns,sel1="sel_node_list1",sel2="sel_node_list2") {
+	function disconnect_selected_nodes(nodes=g.ns,sel1="sel_node_list1",sel2="sel_node_list2",nued_id="nu_edges") {
 	    const nd_sel_box1 = document.getElementById(sel1);
 	    const nd_sel_box2 = document.getElementById(sel2);
 	    const ind1 = nd_sel_box1.selectedIndex;
-	    const ind2 = nd_sel_box2.selectedIndex
-	    nodes[ind1].disconnect(nodes[ind2]);
-	    nodes[ind2].disconnect(nodes[ind1]);
+	    const ind2 = nd_sel_box2.selectedIndex;
+	    if(g.is_connected(ind1,ind2))
+		g.remLink(ind1,ind2);
+	    if(g.is_connected(ind2,ind1))
+		g.remLink(ind2,ind1);
 	    nd_sel_box2.dispatchEvent(new Event("change"));
+	    document.getElementById(nued_id).value = g.nu_edges;
 	}
 	function init_connectedness_selectors(nodes=g.ns,sel1="sel_node_list1",sel2="sel_node_list2",res="sp_is_connected") {
 	    const sel_box1 = document.getElementById(sel1);
@@ -590,10 +594,10 @@
 		sel_box2.selectedIndex = nodes.length-1;
 	    }
 	    sel_box1.addEventListener("change",function() {
-		res_targ.innerHTML = nodes[this.selectedIndex].is_connected(nodes[sel_box2.selectedIndex]);
+		res_targ.innerHTML = Node.is_connected(nodes[this.selectedIndex],nodes[sel_box2.selectedIndex]);
 	    });
 	    sel_box2.addEventListener("change",function() {
-		res_targ.innerHTML = nodes[this.selectedIndex].is_connected(nodes[sel_box1.selectedIndex]);
+		res_targ.innerHTML = Node.is_connected(nodes[this.selectedIndex],nodes[sel_box1.selectedIndex]);
 	    });
 	}
 	function examine_routes_between(sel1="sel_node_list1",sel2="sel_node_list2",col_sel_id="sel_starting_safe_colour",res="sp_is_route_between",gr=g) {
