restart after reading in sedgewick  data

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -688,6 +688,7 @@
 		    parse_sedgewick_data(e.target.result.split(endl));
 		    init_connectedness_selectors();
 		}
+		restart();
 	    }
 	}
 
