a more meaningful tip to the settings chooser

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -350,7 +350,7 @@
 	      <td><input type="button" title="restart animation (Ctrl+Alt+Enter)" class="button1" id="btn_start" onClick="restart()" value="Restart" /></td>
 	    </tr>
 	    <tr>
-	      <td colspan="2"><input type="file" id="infilename"></td>
+	      <td colspan="2"><input title="select settings file to load" type="file" id="infilename"></td>
 	    </tr>
 	    <tr><td colspan="2" class="centred"><label>Misc Parameters</label></td></tr>
 	    <tr>
