--- a/dyngraph.html
+++ b/dyngraph.html
@@ -310,10 +310,15 @@
 		    <td><label title="Ctrl+Alt+L">Labels</label></td>
 		    <td><input id="cb_labels" class="cb" type="checkbox"></td>
 		  </tr>
+		  <tr title="Restart in paused status?">
+		    <td><label label="Paused (Re)Start">PStart</label></td>
+		    <td><input id="cb_paused_start" class="cb" type="checkbox"></td>
+		  </tr>
 	      </table></td>
 	      <td><table>
 		  <tr><td><input type="button" title="Ctrl+Alt+R" class="button1" id="btn_refresh_colours" onClick="refresh_colours();" value="Refresh Colours" /></td></tr>
-		  <tr><td><label style="visibility: hidden;">placeholder</label></td></tr>
+		  <tr><td><input type="button" title="pause or resume animation (Pause/Break on keyboard)" class="button1" id="btn_pause_conti" value="Pause" /></td></tr>
+		  <tr><td><input type="button" title="restart animation (Ctrl+Alt+Enter)" class="button1" id="btn_start" onClick="restart()" value="Restart" /></td></tr>
 	      </table></td>
 	    </tr>
 	    <tr>
@@ -345,10 +350,10 @@
 	      <td><input type="button" title="Ctrl+Alt+C" class="button1" id="btn_clear" onClick="clear_canvas();" value="Clear Canvas" /></td>
 	      <td><input type="button" class="button1" id="btn_store" onClick="save_settings('out_fn');" value="Save Settings" /></td>
 	    </tr>
-	    <tr>
-	      <td><input type="button" title="pause or resume animation (Pause/Break on keyboard)" class="button1" id="btn_pause_conti" value="Pause" /></td>
-	      <td><input type="button" title="restart animation (Ctrl+Alt+Enter)" class="button1" id="btn_start" onClick="restart()" value="Restart" /></td>
-	    </tr>
+	    <!-- <tr> -->
+	      <!-- <tr><td><label style="visibility: hidden;">placeholder</label></td></tr> -->
+	    <!-- <tr><td><label style="visibility: hidden;">placeholder</label></td></tr> -->
+	    <!-- </tr> -->
 	    <tr>
 	      <td colspan="2"><input title="select settings file to load" type="file" id="infilename"></td>
 	    </tr>
@@ -778,7 +783,7 @@
 	});
 	const labelling =  document.getElementById('cb_labels');
 	labelling.addEventListener("change",function() { if (this.checked && tracer.checked) tracer.checked=false; });
-	
+	const cb_paused_start = document.getElementById("cb_paused_start");
 	const btn_start = document.getElementById("btn_start");
 	const btn_pause_conti = document.getElementById("btn_pause_conti");
 	btn_pause_conti.addEventListener("click",function(){
@@ -833,9 +838,20 @@
 	    }
 	}
 	function restart() {
+	    const multip_saved = {
+		x: node_params.fx_multip,
+		y: node_params.fy_multip,
+	    }
 	    if(btn_start.value == "Restart") {
 		if (btn_pause_conti.value == "Continue")
 		    pause_or_continue(btn_pause_conti,btn_start);
+		if (cb_paused_start.checked) {
+		    btn_pause_conti.dispatchEvent(new Event("click"));
+		    multip_saved.x = node_params.fx_multip;
+		    node_params.fx_multip = 0;
+		    multip_saved.x = node_params.fy_multip;
+		    node_params.fy_multip = 0;
+		}
 		start(c2d,
 		      Number(inp_vals_map.nu_nodes.value),
 		      Number(inp_vals_map.nu_nodes2.value),
@@ -844,6 +860,10 @@
 		      Number(inp_vals_map.nu_alpha.value)
 		     );
 		post_init();
+		if (cb_paused_start.checked) {
+		    node_params.fx_multip = multip_saved.x;
+		    node_params.fy_multip = multip_saved.y;
+		}
 	    } else if (btn_start.value == "Step") {
 		anim_step();
 	    }
