--- a/dyngraph.html
+++ b/dyngraph.html
@@ -683,7 +683,7 @@
 	    }
 	}
 
-	function read_image2(input,endl=elem.endl) {
+	function read_image2(input,endl=elem.endl,pstart=cb_paused_start) {
 	    //console.log(input)
 	    if (input.files && input.files[0]) {
 		const reader = new FileReader();
@@ -692,8 +692,13 @@
 		    //console.log(e);
 		    parse_sedgewick_data(e.target.result.split(endl));
 		    init_connectedness_selectors();
+		    if(pstart.checked) {
+			console.log("pstart_checked");
+			first_step = true;
+			animate = false;
+			anim_step();
+		    }
 		}
-		restart();
 	    }
 	}
 
