--- a/dyngraph.html
+++ b/dyngraph.html
@@ -38,8 +38,8 @@
 	      area_edgelist.value = output_string;
 	  }
 	  function set_scenario(scen,node_id="nu_nodes",node_id2="nu_nodes2",edge_id="nu_edges",brch_id="nu_branches") {
-	      //     nodes,  edges, branch
-	      //       0       1      2
+	      //     nodes,  nodes2,edges, branch
+	      //       0       1      2      3
 	      const scen_map = {
 		  0: [true,  false, true,  false],
 		  1: [true,  false, false, true ],
