added a bookmark for easier reference

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -469,7 +469,7 @@
 	    <tr>
 	      <td colspan="2"><input type="button" id="btn_save_as_csv" value="Save as csv" onclick="save_as_csv('edge_list','inp_csv_fn');"> <input type="text" id="inp_csv_fn" value="edgelist.csv" /></td>
 	    </tr>
-	    <tr><td colspan="2" class="centred"><label>Sedgewick I/O</label></td></tr>
+	    <tr><td colspan="2" class="centred"><label><a name="sedge">Sedgewick I/O</a></label></td></tr>
 	    <tr>
 	      <td colspan="2"><input type="file" id="file_sedge_in" onChange="read_image2(this)"></td>
 	    </tr>
